--- a/Basics-Of-OpenAi-Gym.ipynb
+++ b/Basics-Of-OpenAi-Gym.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4ace314",
+   "id": "3bae090b",
    "metadata": {},
    "source": [
     "# The Basics of OpenAi Gym"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a75511c",
+   "id": "992f3e33",
    "metadata": {},
    "source": [
     "## 1. [Installation & Setup](#Installation-&-Setup)\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a90b10",
+   "id": "8713d0f4",
    "metadata": {},
    "source": [
     "# Installation & Setup"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5754ae13",
+   "id": "d5deeace",
    "metadata": {},
    "source": [
     "### Setting up the virtual envorment \n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5530a8f",
+   "id": "ad3e331f",
    "metadata": {},
    "source": [
     "### Setting up the virtual enviorment kernel for Jupyter Notebook\n",
@@ -52,31 +52,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e5db2c",
+   "id": "a9b362d8",
    "metadata": {},
    "source": [
     "### Installation\n",
     "- Firstly we need to install the base gym library `pip install gym` \n",
-    "- Next we will need to install the atari enviorment dependences 'pip install gym[atari]"
+    "- Next we will need to install the atari enviorment dependences `pip install gym[atari]`\n",
+    "- You can freely download Atari 2600 roms [here](#http://www.atarimania.com/rom_collection_archive_atari_2600_roms.html) but the Breakout ROM that we will be using is provided \n",
+    "- Next we will use ALE to import our ROM `ale-import-roms roms/`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a6597714",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10bf2e7e",
-   "metadata": {},
-   "source": [
-    "Next we will need to install the atari enviorment dependences `pip install gym[atari]`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a4e4ae4",
+   "id": "509b46e7",
    "metadata": {},
    "source": [
     "# Environments"
@@ -84,7 +72,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fe5ddc6",
+   "id": "f8b9a3c4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7c97dbf",
    "metadata": {},
    "source": [
     "# Spaces"
@@ -92,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e20a302",
+   "id": "1048ec13",
    "metadata": {},
    "source": [
     "# Wrappers"
@@ -100,19 +94,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d44dd8e1",
+   "id": "18873adf",
    "metadata": {},
    "source": [
     "# Vectorized Environments"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "934a3478",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
