--- a/OpenAi-Gym-Atari-Breakout.ipynb
+++ b/OpenAi-Gym-Atari-Breakout.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dee73b59",
+   "metadata": {},
+   "source": [
+    "# OpenAI Gym\n",
+    "[Gym](https://www.gymlibrary.dev/) is an open-source Python library, made for easy development and testing of reinforcement learning algorithms. Today we will use it to create and run an instance of the Atari Breakout game. The Gym library provies us access to the game state, game rewards, and available actions, which if you remember are nesseicary for our RL framework. \n",
+    "\n",
+    "<img src=\"Test.gif\" width=\"200\" align=\"center\">\n",
+    "\n",
+    "### The RL Framework for Breakout:\n",
+    "- **Action:** Move the paddle left and right \n",
+    "- **State:** The 210x160 RGB image frame \n",
+    "- **Reward:** Amount the game score increases \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8773c08b",
+   "metadata": {},
+   "source": [
+    "### Packages\n",
+    "\n",
+    "We import the following libraries that are required for this demo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ebf8785a",
@@ -34,7 +60,7 @@
       "  Bankswitch Type: AUTO-DETECT ==> 2K\n",
       "\n",
       "Running ROM file...\n",
-      "Random seed is 1667369836\n"
+      "Random seed is 1667373141\n"
      ]
     }
    ],
@@ -47,31 +73,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "274b2496",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "01518217",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A.L.E: Arcade Learning Environment (version 0.8.0+919230b)\n",
-      "[Powered by Stella]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = gym.make(\"ALE/Breakout-v5\")\n",
     "env.reset()\n",
     "image_lst = []\n",
-    "\n",
     "step_num, total_reward = 0, 0\n",
+    "\n",
     "while step_num < 100:\n",
     "    action = env.env.action_space.sample()\n",
-    "    state, reward, done, _, _ = env.step(action)\n",
+    "    state, reward, terminated, truncated, info = env.step(action)\n",
     "\n",
-    "    img = cv2.resize(state, (480, 480), \n",
+    "    img = cv2.resize(state, (160, 210), \n",
     "                     interpolation=cv2.INTER_CUBIC)\n",
     "    \n",
     "    \n",
@@ -84,7 +107,7 @@
     "\n",
     "env.close()\n",
     "\n",
-    "imageio.mimsave('Test.gif', image_lst, fps=60)"
+    "imageio.mimsave('Test.gif', image_lst, fps=30)"
    ]
   },
   {
